# django-ai-lens

./: .env.example  .gitignore  LICENSE  README.md  build_pypi.sh  pyproject.toml  requirements.txt
django_ai_lens/: __init__.py  ai_query.py  prompt_builder.py  queryset_builder.py  schema_extrator.py
django_lens/: __init__.py  queryset_builder.py
src/: ai_query.py  prompt_builder.py  query_schema.py  queryset_builder.py  schema_extrator.py
