[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-lens"
version = "0.1.13"
description = "Natural language queries for Django models, powered by AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Django AI Lens" }]
keywords = ["django", "ai", "llm", "gemini", "natural-language", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-genai>=1.0",
    "pydantic>=2.0",
    "langchain-core>=0.2",
]

[project.urls]
Homepage = "https://github.com/WasinTh/django-ai-lens"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_ai_lens*"]
